--- a/zjs-en.tex
+++ b/zjs-en.tex
@@ -39,7 +39,7 @@
 {
 \begin{itemize}
 \item \textbf{Major}: Computer Science and Engineering
-%\item \textbf{Rank}: 21/122
+\item \textbf{Rank}: 21/122
 %\item \textbf{MajorCourse/Score}: Algorithm and Complexity(96), Discrete Mathematics(98), Operating System(93), Compiler(90), Computer architecture(91), Computer Organization Experiment(92), C++ programming(91), Linear Algebra(94), Artificial Intelligence(93), Computer Network(92), Database(90) and so on.\\
 \end{itemize}
 }
@@ -61,170 +61,147 @@
 \section{Community}
 %\cventry{TechBlog}{\href{http://blog.csdn.net/Zyearn}}{}{}{}{}
 %\cventry{MindBlog}{\url{http://zyearn.github.io}}{}{}{}{}
-\cventry{Blog}{http://www.lifeofzjs.com}{}{}{}{}
+\cventry{Blog}{\url{http://www.lifeofzjs.com}}{}{}{}{}
 %\cventry{OldBlog}{http://blog.csdn.net/Zyearn}{}{}{}{}
-\cventry{Github}{https://github.com/zyearn}{}{}{}{}
+\cventry{Github}{\url{https://github.com/zyearn}}{}{}{}{}
 
-\section{Academic Experience}
-\cventry{2013.9--now}{Research Assistant}{Reliable adaptive distributed systems laboratory}{}{}
-{
-\begin{itemize}
+%\section{Academic Experience}
+%\cventry{2013.9--now}{Research Assistant}{Reliable adaptive distributed systems laboratory}{}{}
+%{
+%\begin{itemize}
 %\item Advisor: \href{http://www.cs.sjtu.edu.cn/~fwu/index.html}{Fan Wu(http://www.cs.sjtu.edu.cn/~fwu/index.html)}
-    \item \textbf{interest}: Memory computing, Operating system.
-\end{itemize}
-}
+%    \item \textbf{interest}: Memory computing, Operating system.
+%\end{itemize}
+%}
 
 
 \section{Internship Experience}
 %SSG STO Big Data Technology
 %Intel Asia-Pacific Research & Development Ltd.
 
+\cventry{2015.6--2015.9}{Tencent Technology (Shenzhen) Co., Ltd}{}{}{}
+{
+\begin{itemize}
+\item position: Interactive Entertainment Group/Aurora Studios/game server-side intern engineer\\
+    I completed a game server system designed for intern engineers, which involves user login, simple user interactions, user logout and user data persistency. I learned and implemented the basic structure of a game server.
+\end{itemize}
+}
+
+
 \cventry{2014.6--2014.12}{INESA Holding Group R\&D Center}{}{}{}
 {
 \begin{itemize}
-\item Position: Front-end/Back-end Software Engineer\\
-I was involved with the development of back-end server using php/NodeJS and front-end parts using javascript/html/css.
+\item Position: Front-end/Back-end intern software engineer\\
+I was involved in the development of back-end server using NodeJS and front-end parts using JavaScript/HTML/CSS.
 \end{itemize}
 }
 
 \cventry{2013.8--2014.2}{Shanghai YiTu Network Technology Co., Ltd}{}{}{}
 {
 \begin{itemize}
-\item Position: Linux C++ Software Engineer\\
-I was responsible for the architecture design and implementation with the purpose of efficiency. Since it is a startup company, I learned many other valuable things other than professional skills, i.e., some standards to develop programs, what is important in working and so on.
+\item Position: Linux C++ intern software engineer\\
+I was involved in the architecture design and implementation of back-end services. Since it is a startup company, I learned many other valuable things other than technical skills, e.g., how to cooperate with each other, what is important in work and so on.
 \end{itemize}
 }
 
 \section{Project Experience}
 %% \subsection{Research Projects}
+\cventry{2015--now}
+{Zaver}
+{yet another fast and efficient HTTP server}
+{open source project}
+{}
+{
+\begin{itemize}
+    \item project link: \url{https://github.com/zyearn/zaver}
+\end{itemize}
+The purpose of Zaver is to help developers understand how to write a high performance server based on epoll. Although Nginx is a good learning example, its complexity and huge code base make people discouraged. Zaver uses as few codes as possible to demonstrate the core structure of high performance server like Nginx. Developers can lay a solid foundation by learning Zaver for further study in network programming.
+}
+\vspace*{0.2\baselineskip}
+
+\cventry{2015.12--2016.3}
+{JOS}
+{an OS kernel}
+{course project}
+{}
+{
+\begin{itemize}
+    \item project link: \url{https://github.com/zyearn/6.828-labs}
+\end{itemize}
+This is the lab project of MIT6.828, in which students will write a small Exokernel. In this project, I implemented a kernel supporting memory management, process, exception/interrupt, syscall, page fault, multi-core support, scheduler, COWfork, preemptive kernel, IPC, file system, network and other basic features.
+}
+\vspace*{0.2\baselineskip}
+
+\cventry{2015.6-2015.9}
+{A small game server system}
+{tencent intern project}
+{}
+{}
+{
+This project is designed for intern engineers to get start in game server programming. I implemented a system supporting user login, simple user interactions, user logout and user data persistency. The difficult part is how to design a reliable and fault-tolerant back-end system.
+}
+\vspace*{0.2\baselineskip}
+
 \cventry{2014.10-2014.12}
 {CE Online}
-{html, javascript, nodejs, express, mysql}
+{HTML, JavaScript, NodeJs, Express, Mysql}
 {outsourcing Project}
 {}
 {
-This project is aimed at writing a portals website of electron component for a startup team. In the back end, we use NodeJS framework, express, which is easy to develop and powerful in middleware. We use mysql as our database. My job acts as a front-end/back-end engineer and also develops database program.\\
+\begin{itemize}
+    \item project link: \url{http://ece114.com}
+\end{itemize}
+This project aimed at writing a portal website of electron component for a startup team. In the back end, we use NodeJS framework, Express, which is suitable for I/O intensive task. We use Mysql as our database. My job involves part of front-end development and back-end development.
 }
-
 \vspace*{0.2\baselineskip}
-\cventry{2014.6--2014.9}
-{Smart Lighting system}
-{php, javascrit, Nodejs}
-{company Project}
+
+\cventry{2012.10-2012.12}
+{A Compiler for SmallC}
+{C, Flex, Yacc, Recursive-Descent Parser}
+{Course Project}
 {}
 {
-This project focuses on controlling lights more smartly, such as adjusting brightness, color temperature, on or off on the web pages.  My job is mainly involved in web develop, notification push in real time and front-end development.\\
+\begin{itemize}
+    \item project link: \url{https://github.com/zyearn/SmallC}
+\end{itemize}
+This project involves the whole process how advanced language are compiled into assembly language.
+I use Flex to do lexical analysis, Yacc to do syntax analysis and generate target code(x86) using recursive-descent method.
 }
 
 %\vspace*{0.2\baselineskip}
-%\cventry{2014.3--2014.6}
-%{Design and implement the data deduplication system based on FFT}
-%{NodeJs, javascrit, C++}
-%{Bachelor Thesis Project}
-%{}
-%{
-%This project is the system implementation of my bachelor thesis. Front end is written by html and bootstrap. NodeJs is used as Server, and I use C++ to do the main calculation to accelerate the process.
-%}
-
-\vspace*{0.2\baselineskip}
-\cventry{2013.12--2014.2}
-{Design API and implement SDK of services provided by intern company}
-{C++}
-{company Projoct}
-{}
-{
-Customers need an interface to access services provided by company. My task is to design API and to implement it robustly in C++.\\
-}
-
-\vspace*{0.2\baselineskip}
-\cventry{2013.8--2013.12}
-{Car plate number recognition system}
-{C++}
-{company Projoct}
-{}
-{
-    This project aimed at recognition of car number plate. I'm responsible for a part of the engineering development(not the recognition algorithm). My job is to write robust C++ code under Linux multi-threaded environment. \\
-}
-%\vspace*{0.2\baselineskip}
-%\cventry{2013.8--2013.9}
-%{Refactor Code from CImg to OpenCV}
+%\cventry{2013.12--2014.2}
+%{Design API and implement SDK of services provided by intern company}
 %{C++}
 %{company Projoct}
 %{}
 %{
-%OpenCV is more suitable and efficient than CImg in our system. My task is refactoring the code from CImg to OpenCV.
-%}
-%
-%\vspace*{0.2\baselineskip}
-%\cventry{2012.10--2013.1}
-%{WordTerminator}
-%{Html, Javascript}
-%{Course Project}
-%{Score:95/100}
-%{
-%WordTerminator is a game, aiming at providing funny experience for users while maintaining the functionality of memorizing English Word.
-%It is a great idea that combine learning words with game.\\
-%%Here is the game demo: \url{http://zjsblog.com/wordTerminator/index.html}\\
-%}
-%
-%\vspace*{0.2\baselineskip}
-%\cventry{2012.9--2012.12}
-%{Control toy car using Andriod program and Bluetooth}
-%{Java}
-%{Course Project}
-%{Score:95/100}
-%{
-%This project aims at 1.using Java to write Andriod applications, 2. using Bluetooth API to implement wireless communication, 3.writing singlechip program to receive the message from the phone, 4.according to the message received, drive the toy car to move.\\
+%Customers need an interface to access services provided by company. My task is to design API and to implement it robustly in C++.\\
 %}
 
-\vspace*{0.2\baselineskip}
-\cventry{2012.10-2012.12}
-{Implementing a Compiler for SMALLC}
-{C,Flex, Bison}
-{Course Project}
-{Score:93/100}
-{
-This project involves the whole process how advanced language are compiled into assembly language.
-I was the designer and implementer of the whole project, which includes lexical analysis, syntax analysis,
-semantic analysis, Intermedia Code Generation, optimizing and Code Generation.\\
-%Here is the report I wrote about the project: \url{http://zjsblog.com/others/CPreport.pdf}\\
-}
 
-\cventry{2012.4--2012.6}
-{Implementing a File System for Operating System}
-{C}
-{Course Project}
-{Score:93/100}
-{
-Using C writing a FileSystem. Big file in the real disk are used to simulate the virtual disk. Design Priciple is Inode, which is excellent data structure for file system.\\
+%\cventry{2012.4--2012.6}
+%{Implementing a File System for Operating System}
+%{C}
+%{Course Project}
+%{Score:93/100}
+%{
+%Using C writing a FileSystem. Big file in the real disk are used to simulate the virtual disk. Design Priciple is Inode, which is excellent data structure for file system.\\
 %Here is the ppt demo when I did my presentation: \url{http://zjsblog.com/others/OSreport.pdf}\\
-}
-
-
-\vspace*{0.2\baselineskip}
-\cventry{2011.10--2012.2}
-{Graphic calculator}
-{Python}
-{Course Project}
-{Score:28/30}
-{
-This project aims at developing a powerful and easy-to-use calculator.We support the function of basic
-calculation, drawing a graph and calculous(integration and derivation).We also use graphics library to support our user interface.\\
-%Here is the demo: \url{http://blog.csdn.net/zyearn/article/details/7282952}
-}
+%}
 
 \section{Awards}
+\cventry{2015}{Shanghai Jiaotong University scholarship}{}{}{}{}
+\cventry{2014}{Shanghai Jiaotong University scholarship}{}{}{}{}
 \cventry{2013}{Shanghai Jiaotong University scholarship}{}{}{}{}
 \cventry{2013}{First prize in CCF Hackathon at Shanghai Jiaotong University}{}{}{}{}
 \cventry{2011}{Shanghai Jiaotong University scholarship}{}{}{}{}
-\cventry{2011}{Excellent cadre in Shanghai JiaoTong University Youth League Committee}{}{}{}{}
 
 \section{Standardized Test}
 \cventry{CET 6}{559}{}{}{}{}
 
 
 \section{Skills}
-\cventry{Language/Platform}{C, C++, NodeJS/Javascript, SQL, Python, HTML/CSS, Shell}{}{}{}{}
+\cventry{Language/Platform}{C, C++, NodeJS/JavaScript, SQL, Python, Shell}{}{}{}{}
 \cventry{Document}{LaTex, Vim}{}{}{}{}
 \cventry{Tools}{Git, MacOSX/Linux}{}{}{}{}
 %\cventry{Games}{Warcraft 3}{}{}{}{}
