--- a/zjs-en.tex
+++ b/zjs-en.tex
@@ -79,14 +79,21 @@
 %SSG STO Big Data Technology
 %Intel Asia-Pacific Research & Development Ltd.
 
+\cventry{2016.6--now}{Shanghai Qiniu Technology Co., Ltd}{}{}{}
+{
+\begin{itemize}
+\item position: server-side engineer\\
+I participate in the design and implementation of the system in core product line(Fusion CDN).
+\end{itemize}
+}
+
 \cventry{2015.6--2015.9}{Tencent Technology (Shenzhen) Co., Ltd}{}{}{}
 {
 \begin{itemize}
 \item position: Interactive Entertainment Group/Aurora Studios/game server-side intern engineer\\
-    I completed a game server system designed for intern engineers, which involves user login, simple user interactions, user logout and user data persistency. I learned and implemented the basic structure of a game server.
+    I completed a game server system designed for intern engineers, which involves user login, simple user interactions, user logout and user data persistency. 
 \end{itemize}
 }
-
 
 \cventry{2014.6--2014.12}{INESA Holding Group R\&D Center}{}{}{}
 {
@@ -100,7 +107,7 @@ I was involved in the development of back-end server using NodeJS and front-end 
 {
 \begin{itemize}
 \item Position: Linux C++ intern software engineer\\
-I was involved in the architecture design and implementation of back-end services. Since it is a startup company, I learned many other valuable things other than technical skills, e.g., how to cooperate with each other, what is important in work and so on.
+I was involved in the architecture design and implementation of back-end services. I learned many other valuable things other than technical skills, e.g., how to cooperate with others, what is important in work and so on.
 \end{itemize}
 }
 
@@ -190,18 +197,18 @@ I use Flex to do lexical analysis, Yacc to do syntax analysis and generate targe
 %}
 
 \section{Awards}
-\cventry{2015}{Shanghai Jiaotong University scholarship}{}{}{}{}
-\cventry{2014}{Shanghai Jiaotong University scholarship}{}{}{}{}
-\cventry{2013}{Shanghai Jiaotong University scholarship}{}{}{}{}
-\cventry{2013}{First prize in CCF Hackathon at Shanghai Jiaotong University}{}{}{}{}
-\cventry{2011}{Shanghai Jiaotong University scholarship}{}{}{}{}
+\cventry{2015}{Shanghai JiaoTong University scholarship}{}{}{}{}
+\cventry{2014}{Shanghai JiaoTong University scholarship}{}{}{}{}
+\cventry{2013}{Shanghai JiaoTong University scholarship}{}{}{}{}
+\cventry{2013}{First prize in CCF Hackathon at Shanghai JiaoTong University}{}{}{}{}
+\cventry{2011}{Shanghai JiaoTong University scholarship}{}{}{}{}
 
 \section{Standardized Test}
 \cventry{CET 6}{559}{}{}{}{}
 
 
 \section{Skills}
-\cventry{Language/Platform}{C, C++, NodeJS/JavaScript, SQL, Python, Shell}{}{}{}{}
+\cventry{Language/Platform}{C, C++, Go, NodeJS/JavaScript, SQL, Python, Shell}{}{}{}{}
 \cventry{Document}{LaTex, Vim}{}{}{}{}
 \cventry{Tools}{Git, MacOSX/Linux}{}{}{}{}
 %\cventry{Games}{Warcraft 3}{}{}{}{}
