--- a/zjs-en.tex
+++ b/zjs-en.tex
@@ -115,7 +115,7 @@
 \section{Main Project Experience}
 
 %brpc
-%indexer?
+%indexer
 %boss
 %taishan
 %media-server
@@ -140,12 +140,12 @@
 
 \cventry{2019.6--present}
 {taishan}
-{a key-value persistent storage}
+{a distributed key-value persistent storage}
 {Bilibili}
 {}
 {
 \begin{itemize}
-    \item Built a key-value persistent storage using raft to relicate data and metadata.
+    \item Built a distributed key-value persistent storage using raft to relicate data and metadata.
     \item Built a c++ rich client including communicating with metaservers, data nodes and doing retries for users automatically.
     \item Built a proxy that compatible with redis client, so that new features in server can be used directly without upgrading client.
 \end{itemize}
